\begin{verbatim}

Last Changes: 18th November 2000 (Version 2.5.0 - Release 0 beta 1 )
Started:      July 1997 (Version 0)

-----------------
TOP  = NEW
DOWN = OLD
-----------------

18th November  2000 (Version 2.5.0 - Release 0 )
	o Added this source tree to CVS at GL4Java.sourceforge.net !
	  (the binary only directories:
	  	archive
		binpkg
           are kept empty)

	o Moved "sun.awt.windows.*" -> "gl4java.jau.awt.windows.*"
	  One changes to access the new location is made in:
	  	gl4java.GLContext 

	o Changed the gl4java.awt.GLAnimCanvas error/warning
	  printout. Now, the "problem in use() method" 
	  is printed out only, if gl4java.GLContext.gljClassDebug
	  is set to true !
	  Also the above error text is splitted in two more
	  comprehensive error text.

	o The native method
		gl4java.GLContext.gljGetCurrentContext
	  is added for those, who things they need it ...

18th September 2000 (Version 2.4.1 - Release 2 )

	o Added Apple MAC OS9.0 PPC support !!
	  This is based upone Gerard Ziemski's
	  sources.

	  - Included a special Mac distribution:
	  	- Installer Disk-Image with AppleScript Installation !
	  	- Demo Disk-Image !

	o Fixed & Added Demos:
		- added Hodglim's NeHe port
		- all demos are now in doubleBuffer mode !
		- all demos does requestFocus right,
		  for key-input !

18th August 2000 (Version 2.4.1 - Release 0 )

	o Improved the Installer code to Version 2.04 !
	  Please read about this in Installer/CHANGES.txt !

	  	Mostly the standalone installation process is improved !

	o Removed the special MAC library names,
	  now the MAC should use the default ...

	o Added 2 new native libraries for testing purpose:
		[lib]GL4JavaJauGLJNItst[.so | .dll]
		[lib]GL4JavaJauGLUJNItst[.so | .dll]
	  
	  These libs does check, if given arrays arguments
	  are handled with the JNI_COPY method or not.

	  If they are handled with the JNI_COPY method,
	  a warning is printed !

	o Added a new native library set: