@@ -7,6 +7,8 @@
 <body text="#000000" bgcolor="#E6E6FF" link="#0000EF" vlink="#51188E" alink="#FF0000">
 
 <center>
+<p><a href="http://www.jausoft.com/gl4java/"><img SRC="../images/gl4javaLogo.png" NOSAVE BORDER=0></a>
+
 <h2>
 GL4Java / Intro / Thanxs</h2></center>
 
@@ -49,9 +51,10 @@ mine</font>
 <p><font size=+1>E3Futura &amp; TeatreSoft for inviting me to the www.campus-party.org
 (2k)</font>
 <br><font size=+1>and makes my appearance to it possible.</font>
+<p><font size=+1>Moises Ferrer Ramirez (moises@bbvnet.com) for creating the nice & cool GL4Java Logo !</font>
 <p><font size=+1>And all the many others, who are not named here !</font>
 <br>&nbsp;
-<p><a href="http://www.jausoft.com"><img SRC="images/jaulogo-hp-300x80.png" NOSAVE BORDER=0 height=80 width=300></a></center>
+<p><a href="http://www.jausoft.com"><img SRC="../images/jaulogo-hp-300x80.png" NOSAVE BORDER=0 height=80 width=300></a></center>
 
 <ul>
 <ul>&nbsp;</ul>
